# masterkb-pipeline-main

./: README.md  pyproject.toml  railway.json  requirements.txt
src/kb_pipeline/: __init__.py  cli.py  config.py  fixtures.py  main.py  merge.py  models.py  settings.py  state.py
src/kb_pipeline/clients/: auth.py  docbuilder.py  event.py  llm.py  nocodb.py  ocr.py  slack.py  terms.py
src/kb_pipeline/normalizers/: __init__.py  common.py  docbuilder.py  event.py  slack.py  terms.py
src/kb_pipeline/pipelines/: docbuilder_pipeline.py  event_pipeline.py  runner.py  slack_pipeline.py  terms_pipeline.py
tests/: conftest.py  test_admin_auth.py  test_app_contract.py  test_core_rules.py  test_deploy_config.py  test_docbuilder_pipeline_skip.py  test_event_docbuilder_source.py  test_nocodb_payloads.py  test_pipeline_decisions.py  test_slack_event_scope.py  test_slack_incremental_lookback.py  test_terms_pipeline.py
